metadata/force-app/main/default/objects/CustomName_gLGBy__c/CustomName_gLGBy__c.object-meta.xml
<CustomObject>
    <description>Description_njomZ</description>
    <label>CustomLabel_QpEGu</label>
    <nameField>
        <label>CustomLabel_QpEGu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_QpEGus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>