metadata/force-app/main/default/objects/CustomName_gLGBy__c/fields/CustomField_AsVeC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AsVeC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldrCodD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>