metadata/force-app/main/default/objects/CustomName_gLGBy__c/fields/CustomField_iEpNc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_iEpNc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLcIil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>